Run and fix bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,6 +384,8 @@ section {
     color: #fff;
     border: none;
     line-height: 22.5px;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .contact-form .submit-btn:hover {
